--- a/.github/workflows/config-part1.yaml
+++ b/.github/workflows/config-part1.yaml
@@ -1,4 +1,4 @@
-name: Parallel Bug Hunt - Fixed
+name: Parallel Bug Hunt - Part1
 
 on:
   workflow_dispatch:
@@ -221,3 +221,106 @@ jobs:
           # Copy to system bin
           sudo cp $HOME/go/bin/* /usr/local/bin/ 2>/dev/null || echo "Tools available in ~/go/bin/"
           echo "$HOME/go/bin" >> $GITHUB_PATH
+
+      - name: Combine and filter results
+        run: |
+          mkdir -p combined-results
+
+          # Set PATH
+          export PATH="$HOME/go/bin:/usr/local/bin:$PATH"
+
+          # Extensions to filter out
+          EXTS='(json|js|css|jpg|jpeg|png|svg|gif|exe|mp4|flv|pdf|doc|webm|wmv|webp|mov|mp3|avi|zip)($|\?)'
+
+          # Root URL
+          echo "https://${{ inputs.domain }}/" > all-urls.tmp
+
+          # Combine all URLs
+          cat passive-wayback/waybackurls.txt >> all-urls.tmp || true
+          cat passive-gau/gau.txt >> all-urls.tmp || true
+
+          # Add some common paths with parameters for testing
+          cat >> all-urls.tmp << 'EOF'
+          https://${{ inputs.domain }}/search?q=test&category=all
+          https://${{ inputs.domain }}/login?redirect=%2Fdashboard
+          https://${{ inputs.domain }}/api/users?id=1&format=json
+          https://${{ inputs.domain }}/product?id=123&color=red
+          https://www.${{ inputs.domain }}/page?ref=home&utm_source=google
+          https://${{ inputs.domain }}/contact?subject=hello&name=test
+          EOF
+
+          # Filter and create final URL list
+          sort -u all-urls.tmp | grep -iEv "\.${EXTS}" | awk 'NF' > combined-results/all-urls.txt
+
+          # Extract parameters
+          if command -v unfurl >/dev/null 2>&1; then
+            unfurl --unique keys < combined-results/all-urls.txt | sort -u > combined-results/unfurl-params.txt
+          else
+            # Fallback parameter extraction
+            grep '?' combined-results/all-urls.txt | while IFS= read -r url; do
+              query="${url#*\?}"
+              echo "$query" | sed 's/&/\n/g' | sed 's/=.*//' | grep -v '^$'
+            done | sort -u > combined-results/unfurl-params.txt
+          fi
+
+          # Add common parameters if file is empty/small
+          if [ $(wc -l < combined-results/unfurl-params.txt) -lt 5 ]; then
+            cat >> combined-results/unfurl-params.txt << 'EOF'
+          id
+          q
+          search
+          query
+          page
+          limit
+          offset
+          sort
+          filter
+          category
+          name
+          email
+          user
+          redirect
+          url
+          callback
+          ref
+          source
+          utm_source
+          debug
+          test
+          EOF
+            sort -u combined-results/unfurl-params.txt -o combined-results/unfurl-params.txt
+          fi
+
+          # Separate static and dynamic URLs
+          grep -v '?' combined-results/all-urls.txt > combined-results/static-urls.txt || true
+          grep '?' combined-results/all-urls.txt > combined-results/dynamic-urls.txt || true
+
+          # Clean up
+          rm -f all-urls.tmp
+
+      - name: Count URLs for matrix
+        id: count
+        run: |
+          DYNAMIC=$(wc -l < combined-results/dynamic-urls.txt)
+          TOTAL=$(wc -l < combined-results/all-urls.txt)
+          echo "dynamic=$DYNAMIC" >> $GITHUB_OUTPUT
+          echo "total=$TOTAL" >> $GITHUB_OUTPUT
+          echo "Found $DYNAMIC dynamic URLs, $TOTAL total URLs"
+
+      - name: Upload combined results
+        uses: actions/upload-artifact@v4
+        with:
+          name: combined-results
+          path: combined-results/
+
+      - name: Save domain input to artifact
+        run: |
+          mkdir -p input-parameters
+          echo "${{ inputs.domain }}" > input-parameters/domain.txt
+          echo "${{ inputs.headers }}" > input-parameters/headers.txt
+
+      - name: Upload input parameters
+        uses: actions/upload-artifact@v4
+        with:
+          name: input-parameters
+          path: input-parameters/
