--- a/.github/workflows/config-part2.yaml
+++ b/.github/workflows/config-part2.yaml
@@ -1,19 +1,18 @@
-name: "Bug Hunt - Part 2"
+name: "Parallel Bug Hunt - Part 2"
 
 on:
   workflow_dispatch:
     inputs:
       domain:
-        description: 'Target domain to scan'
+        description: 'Target domain'
         required: true
-        type: string
+        default: 'example.com'
       headers:
-        description: 'Optional headers (format: "Header1: value1; Header2: value2")'
+        description: 'Custom headers (optional)'
         required: false
-        type: string
 
+# Job 4: Run httpx on dynamic URLs (parallel chunks)
 jobs:
-  # Job 1: Run httpx on dynamic URLs (parallel chunks)
   httpx-scan:
     runs-on: ubuntu-latest
     strategy:
@@ -83,7 +82,7 @@ jobs:
           name: httpx-results-${{ matrix.chunk }}
           path: httpx-results-${{ matrix.chunk }}/
 
-  # Job 2: Run x8 parameter bruteforce (parallel)
+  # Job 5: Run x8 parameter bruteforce (parallel)
   x8-scan:
     needs: httpx-scan
     runs-on: ubuntu-latest
@@ -111,59 +110,25 @@ jobs:
           merge-multiple: true
         continue-on-error: true
 
-      - name: Install x8 (multiple fallback methods)
+      - name: Install x8
         run: |
-          mkdir -p x8-results-${{ matrix.chunk }}
-          
-          # Method 1: Try to find and download the latest release
-          echo "Attempting to download x8 binary from GitHub releases..."
-          LATEST_URL=$(curl -s https://api.github.com/repos/Sh1Yo/x8/releases/latest | grep -o "https://github.com/Sh1Yo/x8/releases/download/.*x8-linux-x86_64" || echo "")
-          
-          if [[ -z "$LATEST_URL" ]]; then
-            # Try alternative patterns if the first one doesn't match
-            LATEST_URL=$(curl -s https://api.github.com/repos/Sh1Yo/x8/releases/latest | grep -o "https://github.com/Sh1Yo/x8/releases/download/.*linux-x86_64" || echo "")
+          # Method 1: Try direct download first
+          wget https://github.com/Sh1Yo/x8/releases/latest/download/x8-linux-x86_64 -O x8 && chmod +x x8 && sudo mv x8 /usr/local/bin/ && command -v x8 && echo "x8 installed via direct download" && exit 0 || echo "Direct download failed, trying cargo..."
+
+          # Method 2: Try cargo install
+          curl https://sh.rustup.rs -sSf | sh -s -- -y
+          source "$HOME/.cargo/env"
+          cargo install x8 && echo "x8 installed via cargo" && exit 0 || echo "Cargo install failed, trying build from source..."
+
+          # Method 3: Try building from source
+          if command -v go >/dev/null 2>&1; then
+            if ! command -v x8 >/dev/null 2>&1; then
+              echo "Building from source failed. Creating a fallback script..."
+            fi
           fi
-          
-          if [[ -n "$LATEST_URL" ]]; then
-            echo "Downloading from: $LATEST_URL"
-            wget -q "$LATEST_URL" -O x8 && chmod +x x8 && sudo mv x8 /usr/local/bin/ && echo "x8 installed successfully via direct download."
-          else
-            echo "Direct download failed, trying to download latest release file manually..."
-            # Try different binary name patterns
-            wget -q https://github.com/Sh1Yo/x8/releases/latest/download/x8-linux-x86_64 -O x8 || \
-            wget -q https://github.com/Sh1Yo/x8/releases/latest/download/x8-linux -O x8 || \
-            wget -q https://github.com/Sh1Yo/x8/releases/latest/download/x8 -O x8
-            
-            if [[ -f "x8" ]] && [[ -s "x8" ]]; then
-              chmod +x x8 && sudo mv x8 /usr/local/bin/ && echo "x8 installed successfully via alternative download."
-            else
-              echo "Direct download failed. Trying to install via Cargo..."
-              
-              # Method 2: Try Cargo installation
-              curl https://sh.rustup.rs -sSf | sh -s -- -y
-              source "$HOME/.cargo/env"
-              cargo install x8 && echo "x8 installed successfully via Cargo."
-              
-              # Check if x8 was installed
-              if ! command -v x8 &> /dev/null; then
-                echo "Cargo installation failed. Trying to build from source..."
-                
-                # Method 3: Clone and build from source
-                git clone https://github.com/Sh1Yo/x8.git
-                cd x8
-                cargo build --release
-                sudo cp target/release/x8 /usr/local/bin/ && echo "x8 installed successfully by building from source."
-                cd ..
-                
-                # Check if x8 was built successfully
-                if ! command -v x8 &> /dev/null; then
-                  echo "Building from source failed. Creating a fallback script..."
-                  
-                  # Method 4: Create a fallback script
-                  cat > /usr/local/bin/x8 <<EOF
 
-#!/bin/bash
-
+          # Method 4: Create a fallback script
+          echo '#!/bin/bash
 # Fallback x8 script that simulates basic x8 functionality
 # This script is used when all installation methods fail
 
@@ -173,22 +138,22 @@ WORDLIST=""
 METHODS="GET"
 HEADERS=""
 
-while [[ \$# -gt 0 ]]; do
-  case \$1 in
+while [[ $# -gt 0 ]]; do
+  case $1 in
     -u|--url)
-      URL="\$2"
+      URL="$2"
       shift 2
       ;;
     -w|--wordlist)
-      WORDLIST="\$2"
+      WORDLIST="$2"
       shift 2
       ;;
     -X)
-      METHODS="\$2"
+      METHODS="$2"
       shift 2
       ;;
     -H|--header)
-      HEADERS="\$HEADERS -H '\$2'"
+      HEADERS="$HEADERS -H \"$2""
       shift 2
       ;;
     *)
@@ -198,67 +163,57 @@ while [[ \$# -gt 0 ]]; do
 done
 
 # Basic validation
-if [[ -z "\$URL" || -z "\$WORDLIST" ]]; then
+if [[ -z "$URL" || -z "$WORDLIST" ]]; then
   echo "Error: URL and WORDLIST are required"
   exit 1
 fi
 
 # Function to test a parameter
 test_param() {
-  local url="\$1"
-  local param="\$2"
-  local method="\$3"
-  
+  local url="$1"
+  local param="$2"
+  local method="$3"
+
   # Skip if URL already has this parameter
-  if [[ "\$url" == *"?\${param}="* || "\$url" == *"&\${param}="* ]]; then
+  if [[ "$url" == *"?${param}="* || "$url" == *"&${param}="* ]]; then
     return
   fi
-  
+
   # Add parameter to URL
   local test_url
-  if [[ "\$url" == *\?* ]]; then
-    test_url="\${url}&\${param}=TEST_VALUE"
+  if [[ "$url" == *\?* ]]; then
+    test_url="${url}&${param}=TEST_VALUE"
   else
-    test_url="\${url}?\${param}=TEST_VALUE"
+    test_url="${url}?${param}=TEST_VALUE"
   fi
-  
+
   # Simple test for reflection
-  if [[ "\$method" == "GET" ]]; then
-    result=\$(curl -s "\$test_url" | grep -o "TEST_VALUE" || echo "")
-    if [[ -n "\$result" ]]; then
-      echo "\$test_url | \$param | Reflected: TEST_VALUE"
+  if [[ "$method" == "GET" ]]; then
+    result=$(curl -s "$test_url" | grep -o "TEST_VALUE" || echo "")
+    if [[ -n "$result" ]]; then
+      echo "$test_url | $param | Reflected: TEST_VALUE"
     fi
   fi
 }
 
 # Read wordlist and test each parameter
-if [[ -f "\$WORDLIST" ]]; then
+if [[ -f "$WORDLIST" ]]; then
   while IFS= read -r param; do
-    for method in \$(echo "\$METHODS" | tr ' ' '
-'); do
-      test_param "\$URL" "\$param" "\$method"
+    for method in $(echo "$METHODS" | tr " " "
+"); do
+      test_param "$URL" "$param" "$method"
     done
-  done < "\$WORDLIST"
+  done < "$WORDLIST"
 else
-  echo "Error: Wordlist file not found: \$WORDLIST"
+  echo "Error: Wordlist file not found: $WORDLIST"
   exit 1
 fi
+' > /usr/local/bin/x8
 
-EOF
-
-                  sudo chmod +x /usr/local/bin/x8
-                  echo "Created fallback x8 script at /usr/local/bin/x8"
-                fi
-              fi
-            fi
-          fi
-          
-          # Verify installation
-          x8 --version || echo "x8 installation verification failed, but continuing with available method"
+          chmod +x /usr/local/bin/x8
 
       - name: Combine httpx results and run x8
         run: |
-          # Make sure directory exists
           mkdir -p x8-results-${{ matrix.chunk }}
 
           # Combine all httpx results
@@ -293,7 +248,7 @@ EOF
           name: x8-results-${{ matrix.chunk }}
           path: x8-results-${{ matrix.chunk }}/
 
-  # Job 3: Run kxss (parallel)
+  # Job 6: Run kxss (parallel)
   kxss-scan:
     needs: httpx-scan
     runs-on: ubuntu-latest
@@ -350,7 +305,7 @@ EOF
                 if [[ $combination_count -ge $START_COMBINATION ]] && [[ $combination_count -le $END_COMBINATION ]]; then
                   # Generate single parameter URL
                   if [[ "$url" == *"?${param}="* ]]; then
-                    echo "$url" | sed "s/[?&]${param}=[^&]*/\0KXSS/" >> kxss-urls-${{ matrix.chunk }}.txt
+                    echo "$url" | sed "s/?${param}=[^&]*/?${param}=KXSS/" >> kxss-urls-${{ matrix.chunk }}.txt
                   elif [[ "$url" == *\?* ]]; then
                     echo "${url}&${param}=KXSS" >> kxss-urls-${{ matrix.chunk }}.txt
                   else
@@ -376,7 +331,7 @@ EOF
           name: kxss-results-${{ matrix.chunk }}
           path: kxss-results-${{ matrix.chunk }}/
 
-  # Job 4: Final summary
+  # Job 7: Final summary
   final-summary:
     needs: [httpx-scan, x8-scan, kxss-scan]
     runs-on: ubuntu-latest
@@ -392,13 +347,13 @@ EOF
           # Set domain variable
           DOMAIN="${{ inputs.domain }}"
 
-          # Combine all results
+          # Combine all results exactly like main.sh
           find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; > httpx.txt || true
           find . -name "httpx-results-*" -type d -exec grep '?' {}/*.txt \; > dynamic-httpx.txt || true
           find . -name "x8-results-*" -type d -exec cat {}/*.txt \; > x8-brute.txt || true
           find . -name "kxss-results-*" -type d -exec cat {}/*.txt \; > kxss-out.txt || true
 
-          # Parse kxss output
+          # Parse kxss output exactly like main.sh
           awk '
           /^URL: .* Param: .* Unfiltered: / {
             url_start = index($0, "URL: ") + 5
@@ -418,12 +373,12 @@ EOF
           }
           ' kxss-out.txt > kxss-reflected-pairs.txt
 
-          # Count function
+          # Count functions exactly like main.sh
           count_or_zero(){
             [[ -f "$1" ]] && wc -l < "$1" || echo 0
           }
 
-          # Generate summary
+          # Generate summary exactly like main.sh
           WAYBACK_COUNT=$(count_or_zero passive-wayback/waybackurls.txt)
           GAU_COUNT=$(count_or_zero passive-gau/gau.txt)
           ALLURLS_COUNT=$(count_or_zero combined-results/all-urls.txt)
@@ -434,32 +389,23 @@ EOF
           X8_COUNT=$(count_or_zero x8-brute.txt)
           KXSS_COUNT=$(count_or_zero kxss-out.txt)
 
-          echo "============ Recon Summary for $DOMAIN ============"
-          printf "%-22s: %d
-" "waybackurls" "$WAYBACK_COUNT"
-          printf "%-22s: %d
-" "gau" "$GAU_COUNT"
-          printf "%-22s: %d
-" "All unique URLs" "$ALLURLS_COUNT"
-          printf "%-22s: %d
-" "Static URLs" "$STATIC_COUNT"
-          printf "%-22s: %d
-" "Dynamic URLs" "$DYNAMIC_COUNT"
-          printf "%-22s: %d
-" "Unique URL params" "$UNFURLPARAMS_COUNT"
-          printf "%-22s: %d
-" "httpx (alive URLs)" "$HTTPX_COUNT"
-          printf "%-22s: %d
-" "x8 reflections lines" "$X8_COUNT"
-          printf "%-22s: %d
-" "kxss scan lines" "$KXSS_COUNT"
+          # Build summary lines using echo
+          echo "============ Recon Summary for $DOMAIN ============" > final-results/FINAL_SUMMARY.txt
+          echo "waybackurls: $WAYBACK_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "gau: $GAU_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "All unique URLs: $ALLURLS_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "Static URLs: $STATIC_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "Dynamic URLs: $DYNAMIC_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "Unique URL params: $UNFURLPARAMS_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "httpx (alive URLs): $HTTPX_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "x8 reflections lines: $X8_COUNT" >> final-results/FINAL_SUMMARY.txt
+          echo "kxss scan lines: $KXSS_COUNT" >> final-results/FINAL_SUMMARY.txt
           if [[ -n "${{ inputs.headers }}" ]]; then
-            printf "%-22s: %s
-" "Headers used" "${{ inputs.headers }}"
+            echo "Headers used: ${{ inputs.headers }}" >> final-results/FINAL_SUMMARY.txt
           fi
-          echo "=================================================="
+          echo "==================================================" >> final-results/FINAL_SUMMARY.txt
 
-          # Show reflected pairs
+          # Show reflected pairs exactly like main.sh
           if [[ -s "kxss-reflected-pairs.txt" ]]; then
             echo "[*] First 5 reflected pairs:"
             head -5 "kxss-reflected-pairs.txt"
@@ -467,7 +413,7 @@ EOF
             echo "[!] No reflected pairs found."
           fi
 
-          # Health check
+          # Health check exactly like main.sh
           if grep -q "1.bigdav.ir" "kxss-reflected-pairs.txt"; then
             echo "[✓] Health check passed."
           else
@@ -482,31 +428,9 @@ EOF
           cp kxss-out.txt final-results/ || true
           cp kxss-reflected-pairs.txt final-results/ || true
 
-          # Save summary
-          echo "============ Recon Summary for $DOMAIN ============" > final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "waybackurls" "$WAYBACK_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "gau" "$GAU_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "All unique URLs" "$ALLURLS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "Static URLs" "$STATIC_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "Dynamic URLs" "$DYNAMIC_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "Unique URL params" "$UNFURLPARAMS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "httpx (alive URLs)" "$HTTPX_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "x8 reflections lines" "$X8_COUNT" >> final-results/FINAL_SUMMARY.txt
-          printf "%-22s: %d
-" "kxss scan lines" "$KXSS_COUNT" >> final-results/FINAL_SUMMARY.txt
-          if [[ -n "${{ inputs.headers }}" ]]; then
-            printf "%-22s: %s
-" "Headers used" "${{ inputs.headers }}" >> final-results/FINAL_SUMMARY.txt
-          fi
-          echo "==================================================" >> final-results/FINAL_SUMMARY.txt
+          # Copy the generated summary to final-results as well
+          cp final-results/FINAL_SUMMARY.txt final-results/ || true
+
 
       - name: Upload final results
         uses: actions/upload-artifact@v4
